<resources>
    <string name="app_name">Engineer Calc</string>
    <string name="app_text">\nVyberte operaci, kterou chcete provést:\n</string>
    <string-array name="type_array">
        <item>Tah</item>
        <item>Tlak</item>
        <item>Ohyb</item>
        <item>Smyk</item>
        <item>Krut</item>
    </string-array>
    <string-array name="nature_array">
        <item>Statický</item>
        <item>Míjivý</item>
        <item>Střídavý</item>
    </string-array>
    <string-array name="norm_type">
        <item>ČSN</item>
        <item>ČSN EN</item>
        <item>číslo materiálu</item>
    </string-array>
    <string-array name="csn_material_array">
        <item>11343</item>
        <item>11373</item>
        <item>11423</item>
        <item>11500</item>
        <item>11600</item>
        <item>11700</item>
        <item>12020</item>
        <item>12060</item>
        <item>Jiný: </item>
    </string-array>
    <string-array name="csn_material_array_short">
        <item>11343</item>
        <item>11373</item>
        <item>11423</item>
        <item>11500</item>
        <item>11600</item>
        <item>11700</item>
        <item>12020</item>
        <item>12060</item>
    </string-array>
    <string-array name="csn_en_material_array">
        <item>S235JRG1</item>
        <item>E295</item>
        <item>E335</item>
        <item>E360</item>
        <item>C16E</item>
        <item>C55E</item>
        <item>Jiný: </item>
    </string-array>
    <string-array name="csn_en_material_array_short">
        <item>S235JRG1</item>
        <item>E295</item>
        <item>E335</item>
        <item>E360</item>
        <item>C16E</item>
        <item>C55E</item>
    </string-array>
    <string-array name="nr_material_array">
        <item>1.0036</item>
        <item>1.0050</item>
        <item>1.0060</item>
        <item>1.0070</item>
        <item>1.1148</item>
        <item>1.1203</item>
        <item>Jiný: </item>
    </string-array>
    <string-array name="nr_material_array_short">
        <item>1.0036</item>
        <item>1.0050</item>
        <item>1.0060</item>
        <item>1.0070</item>
        <item>1.1148</item>
        <item>1.1203</item>
    </string-array>
    <string-array name="prurez_array">
        <item>Kruh</item>
        <item>Čtverec</item>
        <item>Obdélník</item>
    </string-array>
    <string-array name="prurez_array_short">
        <item>Kruh</item>
        <item>Čtverec</item>
    </string-array>
    <string-array name="hole_tolerance_array">
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>JS</item>
        <item>J</item>
        <item>K</item>
        <item>M</item>
        <item>N</item>
        <item>P</item>
        <item>R</item>
        <item>S</item>
    </string-array>
    <string-array name="tolerance_array">
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>js</item>
        <item>j</item>
        <item>k</item>
        <item>m</item>
        <item>n</item>
        <item>p</item>
        <item>r</item>
        <item>s</item>
    </string-array>
    <string-array name="e">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="f">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="g">
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="h">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="js">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="j">
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="k">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="m">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="n">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="p">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="r">
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="s">
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="modul">
        <item>0.05</item>
        <item>0.06</item>
        <item>0.08</item>
        <item>0.1</item>
        <item>0.12</item>
        <item>0.15</item>
        <item>0.2</item>
        <item>0.25</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.8</item>
        <item>1</item>
        <item>1.25</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>25</item>
        <item>32</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>80</item>
        <item>100</item>
    </string-array>
    <string name="rot_info">Zadejte základní parametry pro výpočet</string>
    <string name="tens_info">Výpočet vnitřního napětí materiálu</string>
    <string name="cog_info">Výpočet ozubeného kola</string>
    <string name="title_activity_tension_calc">TensionCalc</string>
    <string name="sideA_length">Strana a (mm):</string>
    <string name="sideA_diameter">Průměr (mm):</string>
    <string name="modul_txt">Modul:</string>
    <string name="pocet_z">Počet zubů:</string>
    <string name="roztec_kr">Roztěčná kružnice:</string>
    <string name="roztec">Rozteč:</string>
    <string name="vrcholova_vule">Vrcholová vůle:</string>
    <string name="vyska_hlavy">Výška hlavy:</string>
    <string name="vyska_paty">Výška paty:</string>
    <string name="vyska_zubu">Výška zubu:</string>
    <string name="hlavova_kr">Hlavová kružnice:</string>
    <string name="patni_kr">Patní kružnice:</string>
    <string name="zub_tl">Tloušťka zubu:</string>
    <string name="zub_mez">Zubní mezera:</string>
    <string name="zub_sir">Šířka zubu:</string>
    <string name="zero_mm">0 mm</string>
    <string name="sect_prod">Výroba</string>
    <string name="sect_const">Konstrukce</string>
    <string name="sect_mat">Materiály</string>
    <string name="butt_rot">Výpočet otáček</string>
    <string name="butt_tol">Tolerance rozměrů</string>
    <string name="butt_force">Výpočet povoleného zatížení</string>
    <string name="butt_tens">Výpočet vnitřního napětí</string>
    <string name="butt_cogwheel">Výpočet ozubeného kola</string>
    <string name="butt_cogwheel_rev">Zpětný výpočet ozubeného kola</string>
    <string name="sect_mat_sel">Ocel</string>

    <string name="butt_11343">11343</string>
    <string name="butt_11373">11373</string>
    <string name="butt_11423">11423</string>
    <string name="butt_11500">11500</string>
    <string name="butt_11600">11600</string>
    <string name="butt_11700">11700</string>
    <string name="butt_12020">12020</string>
    <string name="butt_12060">12060</string>

    <string name="max_tens">Maximální pevnost:</string>
    <string name="wheel_diamter">Průměr kola:</string>
    <string name="zero">0</string>
    <string name="modul_txt_poz">Modul: *</string>
    <string name="hlavova_kr_poz">Hlavová kružnice: **</string>
    <string name="com_star">*   Vypočtená hodnota nemusí odpovídat normovaným hodnotám modulu</string>
    <string name="com_2star">** Hodnota průměru hlavové kružnice je rovna průměru kola</string>
    <string name="butt_ok">OK</string>
    <string name="norm_text">Značení dle:</string>
</resources>
